--- a/modules/ROOT/pages/configuring-dev-env.adoc
+++ b/modules/ROOT/pages/configuring-dev-env.adoc
@@ -37,7 +37,8 @@ include::{partialsdir}/attributes.adoc[]
 
 ****
 
-`src/mobile-services.json`
+We suggest to include `mobile-services.json` in your app and `require` it for usage with app init. If `require` is not
+available you can also paste the contents of this file directly.
 
 ****
 
